# napari-sparrow

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  LICENSE  README.md  asv.conf.json  build_docs.sh  docker-compose.yml  environment.yml  environment_docs.yml  environment_mesmer.yml  environment_test.yml  environment_vib_compute.yml  flake.nix  nohup.out  pipelineScripts.py  pyproject.toml  pytest.ini  script_plants.py  setup.cfg  tox.ini
.github/workflows/: build.yaml  release.yaml  run_tests.yml  test_and_deploy.yml
benchmarks/: benchmarks.py
configs/: pipeline.yaml
configs/allocate/: resolve_liver.yaml  vizgen_example.yaml
configs/annotate/: resolve_liver.yaml
configs/clean/: resolve_liver.yaml  vizgen_example.yaml
configs/dataset/: resolve.yaml  resolve_liver.yaml  resolve_liver_2.yaml  vizgen.yaml  vizgen_example.yaml
configs/experiment/: liver.yaml  liver_small.yaml  resolve_liver.yaml  vizgen_example.yaml
configs/local/: default.example.yaml  default.yaml
configs/paths/: default.yaml  output.yaml
configs/preprocess/: default.yaml
configs/segmentation/: cellpose_resolve_liver.yaml  cellpose_vizgen_example.yaml
configs/visualize/: resolve_liver.yaml
docs/: Makefile  api.md  conf.py  contributing.md  development.md  hpc.md  index.md  installation.md  notebooks.md  references.md  requirements.txt  usage.md  usecases.md  vib_compute.md
docs/_templates/autosummary/: function.rst
docs/extensions/: typed_returns.py
docs/tutorials/: FlowSOM_for_pixel_clustering.ipynb  Harpy_feature_calculation.ipynb  Harpy_quickstart.ipynb  Harpy_transcriptomics.ipynb  Visualizing_metaclustering.ipynb  coordinate_systems.ipynb  dummy.ipynb  index.md
docs/tutorials/advanced/: Harpy_QC_in_silico.ipynb  Harpy_aggregate_rasters.ipynb  Harpy_distance_calc.ipynb  Harpy_instanseg.ipynb  Harpy_transcriptomics.ipynb  Interactive_napari_cell_annotation.ipynb  Interactive_napari_pixel_annotation.ipynb  Rasterize_and_vectorize.ipynb  Understanding_Dask.ipynb  coordinate_systems.ipynb  index.md
docs/tutorials/general/: FlowSOM_for_pixel_and_cell_clustering.ipynb  Harpy_feature_calculation.ipynb  SPArrOW_quickstart.ipynb  Visualizing_napari.ipynb  index.md
docs/tutorials/hpc/: index.md  intro.md  vib_compute.md
experiments/: create_correct_atlas.ipynb  create_xarray_zarr.ipynb  example_hydra.ipynb  example_of_cluster_plotter.ipynb  example_pixel_cell_clustering_ark.ipynb  example_pixel_cell_clustering_blobs.ipynb  example_pixel_clustering.ipynb  hpc-analysis-resolve-liver.ipynb  load_spatialdata.ipynb  markerGeneListMartinNoLow.csv  markers_including_CD45neg.csv  read_vizgen.ipynb  script_liver.ipynb  script_liver_spongepy.ipynb  script_plants.py  test.ipynb  vizgenplotDAPIPolygon.ipynb
experiments/scipy-edt/: scipy-distance-transform-experiment.ipynb
scripts/: create_dataset.py
src/: pipeline.py  segment.py
src/harpy/: __init__.py  pipeline.py
src/harpy/_tests/: conftest.py  test_notebooks.py  test_pipeline.py  test_widget.py
src/harpy/datasets/: __init__.py  cluster_blobs.py  pixie_example.py  proteomics.py  registry.py  transcriptomics.py
src/harpy/image/: __init__.py  __init__.pyi  _contrast.py  _filters.py  _image.py  _manager.py  _map.py  _normalize.py  _rasterize.py  _tiling.py  _transcripts.py
src/harpy/io/: __init__.pyi  _merscope.py  _spatial_data.py  _transcripts.py  _visium.py  _visium_hd.py  _xenium.py
src/harpy/plot/: __init__.py  __init__.pyi  _enrichment.py  _flowsom.py  _plot.py  _qc_image.py  _qc_segmentation.py  _sanity.py  _tiling_correction.py  _transcripts.py
src/harpy/points/: _points.py
src/harpy/shape/: _cell_expansion.py  _manager.py  _shape.py
src/harpy/table/: __init__.py  _allocation.py  _allocation_intensity.py  _annotation.py  _clustering.py  _enrichment.py  _manager.py  _preprocess.py  _regionprops.py  _table.py
src/harpy/utils/: __init__.py  _aggregate.py  _io.py  _query.py  utils.py
src/harpy/widgets/: __init__.py  _allocate_widget.py  _annotate_widget.py  _clean_widget.py  _load_widget.py  _segment_widget.py  _wizard_widget.py
src/napari_sparrow/: __init__.py  functions.py  multi.py  napari.yaml  pipeline.py  pipeline_functions.py  single.py
src/napari_sparrow/_tests/: conftest.py  test_pipeline.py  test_widget.py
src/napari_sparrow/configs/: pipeline.yaml
src/napari_sparrow/image/: __init__.py  _apply.py  _combine.py  _contrast.py  _image.py  _manager.py  _minmax.py  _segmentation.py  _tiling.py  _tophat.py  _transcripts.py
src/napari_sparrow/io/: _spatial_data.py  _transcripts.py
src/napari_sparrow/plot/: __init__.py  _annotation.py  _cluster_cleanliness.py  _clustering.py  _enrichment.py  _plot.py  _preprocessed_anndata.py  _sanity.py  _segmentation.py  _tiling_correction.py  _transcripts.py
src/napari_sparrow/shape/: __init__.py  _cell_expansion.py  _manager.py  _shape.py
src/napari_sparrow/table/: __init__.py  _allocation.py  _allocation_intensity.py  _annotation.py  _clustering.py  _enrichment.py  _preprocess.py  _regionprops.py  _table.py
src/napari_sparrow/utils/: __init__.py  _singletons.py  pylogger.py  utils.py
src/napari_sparrow/widgets/: __init__.py  _allocate_widget.py  _annotate_widget.py  _clean_widget.py  _export_widget.py  _load_widget.py  _segment_widget.py  _wizard_widget.py
src/napari_spongepy/: __init__.py  _preprocess_widget.py  _segmentation_widget.py  _transcripts_widget.py  _wizard_widget.py  functions.py  multi.py  napari.yaml  pipeline.py  pipeline_functions.py  single.py
src/napari_spongepy/_tests/: README.md  conftest.py  test_notebooks.sh  test_pipeline.py  test_pipeline2.py  test_widget.py
src/napari_spongepy/configs/: pipeline.yaml
src/napari_spongepy/utils/: __init__.py  _singletons.py  pylogger.py  utils.py
src/napari_spongepy/widgets/: __init__.py  _allocate_widget.py  _annotate_widget.py  _clean_widget.py  _export_widget.py  _load_widget.py  _prototype_anndata_widget.py  _segment_widget.py  _visualize_widget.py  _wizard_widget.py
src/sparrow/: __init__.py  napari.yaml  pipeline.py  single.py
(+599 files in other folders)
