[metadata]
name = napari_sparrow
version = 0.0.1
description = Napari plugin for spatial transcriptomics data analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/saeyslab/napari-sparrow
license = BSD-3-Clause
license_file = LICENSE
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/saeyslab/napari-sparrow/issues
    Documentation = https://github.com/saeyslab/napari-sparrow#README.md
    Source Code = https://github.com/saeyslab/napari-sparrow
    User Support = https://github.com/saeyslab/napari-sparrow/issues

[options]
packages = find:
install_requires =
    hydra-colorlog==1.2.0
    hydra-core==1.2.0
    hydra-optuna-sweeper==1.2.0
    magicgui
    numpy
    pyrootutils
    qtpy
python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sparrow = napari_sparrow.single:main
    sparrow-multi = napari_sparrow.multi:main
napari.manifest =
    napari-sparrow = napari_sparrow:napari.yaml

[options.extras_require]
testing =
    napari
    pyqt5
    pytest
    pytest-cov
    pytest-qt
    tox

[options.package_data]
* = *.yaml

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203, E501
