[metadata]
name = harpy-analysis
author = dambi
version = 0.0.1
description = single-cell spatial proteomics analysis that makes you happy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/saeyslab/harpy
license = BSD-3-Clause
license_file = LICENSE
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/saeyslab/harpy/issues
    Documentation = https://github.com/saeyslab/harpy#README.md
    Source Code = https://github.com/saeyslab/harpy
    User Support = https://github.com/saeyslab/harpy/issues

[options]
packages = find:
install_requires =
    spatialdata>=0.2.0
    ome-zarr>=0.9.0
    squidpy>=1.5.0
    scanpy>=1.9.1
    voronoi-diagram-for-polygons>=0.1.6
    rasterio>=1.3.2
    seaborn>=0.12.2
    leidenalg>=0.9.1
    geopandas>=1.0.1
    omegaconf==2.3.0
    nptyping
    magicgui
    pyrootutils
    universal_pathlib
    datasets
    crick
    spatialdata_io
    #spatialdata_io @ git+https://github.com/ArneDefauw/spatialdata-io.git@visium_hd
python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    harpy = harpy.single:main
napari.manifest =
    harpy = harpy:napari.yaml

[options.extras_require]
plugin =
    napari>=0.4.18
    hydra-core>=1.2.0
    hydra-colorlog>=1.2.0
    napari-spatialdata>=0.2.6

    cellpose>=2.2.3
    pytest-qt

testing =
    hydra-core>=1.2.0
    hydra-colorlog>=1.2.0
    cellpose>=2.2.3
    datasets
    jax>=0.4.6
    jaxlib>=0.4.6
    basicpy>=1.0.0
    opencv-python
    pytest
    pytest-cov
    tox
    nbconvert

cli =
    hydra-core>=1.2.0
    hydra-colorlog>=1.2.0
    submitit>=1.4.5
    hydra-submitit-launcher>=1.2.0

docs =
    sphinx>=4.5
    sphinx-book-theme>=1.0.0
    sphinx_rtd_theme
    myst-nb
    sphinxcontrib-bibtex>=1.0.0
    sphinx-autodoc-typehints
    sphinx-design
    # For notebooks
    ipython>=8.6.0
    sphinx-copybutton

clustering =
    scikit-learn>=1.3.1
    flowsom @ git+https://git@github.com/saeyslab/FlowSOM_Python
    datasets
    textalloc
    joypy
    # For dask cluster dashboard
    bokeh
    # For visualization
    spatialdata-plot>=0.2.0
    #napari-clusters-plotter>=0.7.3 # can not be installed alongside harpy plugin
    #napari-convpaint @ git+ssh://git@github.com/guiwitz/napari-convpaint.git

instanseg =
    InstanSeg @ git+https://github.com/instanseg/instanseg
    torchvision
    monai

[options.package_data]
* = *.yaml

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203, E501
